# skills-threat-analysis

./: .gitignore  CLAUDE.md  README.md  config.yaml.example  pyproject.toml  skill.md
deploy/: scan-worker.service  supervisord.conf  update.sh
docs/: REPORT_SCHEMA_V2.0_260313.md  SKILL_PACKAGE_SPEC.md  Skill-Design.md
example-skills/065bbc1dae4e4b53be9918251c064761/: _meta.json
example-skills/31third-safe-rebalancer-simple/: detail.json
example-skills/34c2bfb3aa1d428c88d61d4e17857ece/: _meta.json
example-skills/4dee5c449cd64337b62a62aa29781a2f/: _meta.json
example-skills/Be1Human/multi-agent-cn/: detail.json
example-skills/Be1Human/naruto-multi-agent/: detail.json
example-skills/Be1Human/naruto-multi-agent-cn/: detail.json
example-skills/Be1Human/respond-first/: detail.json
example-skills/excel-automation-main/: .gitignore  README.md  SKILL.md  install.py
example-skills/feishu-doc/: detail.json
example-skills/mongodb-atlas-admin/: detail.json
example-skills/openclaw-diagnostics/: detail.json
example-skills/tikhub-api-skill/: detail.json
example-skills/unbrowse-openclaw/: detail.json
example-skills/x-twitter2/: SKILL.md
example-skills/xiaoai-speaker/: detail.json
example-skills/yieldvault-agent/: detail.json
script/: send_test_message.py
src/scanner/: __init__.py  cli.py  loader.py  models.py  orchestrator.py
src/scanner/stage1/: advanced.py  (+2 more)
tests/: test_loader.py  test_stage1.py  test_stage2.py  test_stage3.py  test_worker.py
tests/fixtures/: ambiguous_skill.md  clean_skill.md  malicious_skill.md  social_engineering_skill.md
(+14 files in other folders)
